Completion of Part_B - Introduced memo_item.xml for layout. - Added new functions to DatabaseHandler.java and MainActivity.java. - Altered TextView for 'output' in activity_main.xml to a RecyclerView.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,14 +50,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/memoToDelete" />
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/memos"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deleteMemo" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
